--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=demo
 spring.datasource.url=jdbc:mysql://localhost:3306/Aerolinea
 spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.password=Minnie2024
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
