--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=demo
 spring.datasource.url=jdbc:mysql://localhost:3306/Aerolinea
 spring.datasource.username=root
-spring.datasource.password=Minnie2024
+spring.datasource.password=
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
 
@@ -9,3 +9,4 @@ springdoc.api-docs.enabled=true
 springdoc.swagger-ui.enabled=true
 
 springdoc.swagger-ui.path=/doc/swagger-ui.html
+
